--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./index.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -14,6 +17,7 @@
     "@discordjs/voice": "^0.16.1",
     "dayjs": "^1.11.10",
     "discord.js": "^14.14.1",
+    "express": "^4.18.3",
     "ffmpeg-static": "^5.2.0",
     "tweetnacl": "^1.0.3"
   }
